--- a/projects/infographics-baby/_pgbackup/index_1738501463.html
+++ b/projects/infographics-baby/_pgbackup/index_1738501463.html
@@ -51,13 +51,11 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="infographics-baby-0.jpg" target="_blank"><img border="0" src="projects/infographics-baby/infographics-baby.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="infographics-baby-0.jpg" target="_blank"><img border="0" src="infographics-baby.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Baby Fair Ads</h4>
-                        <small>Infographics</small>
+                        <h4>Baby Fair Ads</h4><small>Infographics</small>
                     </li>
                     <li>
                         <p>Key Visual</p>
@@ -71,15 +69,20 @@
                     <p><strong>Objective:</strong> Design engaging banners and promotional materials for the Baby Fair event to attract parents and expecting families.</p>
                     <p><strong>Process & Tactics:</strong></p>
                     <ul>
-                        <li><strong>Understanding the Event:</strong> Collaborated with the event organizers to grasp the key message and target audience. Researched popular baby products and trends to ensure relevance and appeal.
+                        <li>
+                            <strong>Understanding the Event:</strong> Collaborated with the event organizers to grasp the key message and target audience. Researched popular baby products and trends to ensure relevance and appeal.
                         </li>
-                        <li><strong>Conceptualization:</strong> Brainstormed and sketched initial ideas focusing on baby essentials and event highlights. Planned an adaptive design strategy for both online and offline media.
+                        <li>
+                            <strong>Conceptualization:</strong> Brainstormed and sketched initial ideas focusing on baby essentials and event highlights. Planned an adaptive design strategy for both online and offline media.
                         </li>
-                        <li><strong>Design Execution:</strong> Created a captivating master banner showcasing various baby products like high chairs, baby bottles, and monitors. Adapted the design to different ad sizes, maintaining consistency across platforms.
+                        <li>
+                            <strong>Design Execution:</strong> Created a captivating master banner showcasing various baby products like high chairs, baby bottles, and monitors. Adapted the design to different ad sizes, maintaining consistency across platforms.
                         </li>
-                        <li><strong>Feedback & Refinement:</strong> Presented initial designs to stakeholders and gathered feedback. Made necessary adjustments to align with the brand guidelines and campaign goals.
+                        <li>
+                            <strong>Feedback & Refinement:</strong> Presented initial designs to stakeholders and gathered feedback. Made necessary adjustments to align with the brand guidelines and campaign goals.
                         </li>
-                        <li><strong>Final Delivery:</strong> Ensured all deliverables met quality standards. Launched the ads on various media channels and monitored their performance.
+                        <li>
+                            <strong>Final Delivery:</strong> Ensured all deliverables met quality standards. Launched the ads on various media channels and monitored their performance.
                         </li>
                     </ul>
                     <p><strong>Outcome:</strong> <em>Successful Campaign:</em> The Baby Fair saw increased attendance and engagement, thanks to the compelling and strategic design.</p>
