--- a/projects/infographics-baby/_pgbackup/index_1738501554.html
+++ b/projects/infographics-baby/_pgbackup/index_1738501554.html
@@ -52,7 +52,7 @@
             </div>
         </header>
         <section id="ajaxpage" class="ajaxpage">
-            <a href="projects/infographics-baby/infographics-baby-0.jpg" target="_blank"><img border="0" src="projects/infographics-baby/infographics-baby.jpg"/></a>
+            <a href="infographics-baby-0.jpg" target="_blank"><img border="0" src="projects/infographics-baby/infographics-baby.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
