--- a/_pgbackup/index_1738502776.html
+++ b/_pgbackup/index_1738502776.html
@@ -155,55 +155,18 @@
                                 <h5>Projects</h5>
                                 <p>Some of my most recent work, feel free to filter the projects based on what I did for each.</p>
                                 <ul class="filters">
-                                    <li data-filter="*" class="is-checked">
-                                        <span data-hover="all">all</span>
-                                    </li>
-                                    <li data-filter=".html5">
-                                        <span data-hover="html5">html5</span>
-                                    </li>
-                                    <li data-filter=".b2b">
-                                        <span data-hover="b2b">b2b</span>
-                                    </li>
-                                    <li data-filter=".branding">
-                                        <span data-hover="branding">branding</span>
-                                    </li>
-                                    <!-- hide
-                                    <li data-filter=".casino">
-                                        <span data-hover="casino">casino</span>
-                                    </li>
-                                    -->
-                                    <li data-filter=".games">
-                                        <span data-hover="games">games</span>
+                                    <li data-filter="*" class="is-checked"><span data-hover="all">all</span>
                                     </li>
                                     <li data-filter=".infographics">
                                         <span data-hover="infographics">infographics</span>
                                     </li>
-                                    <li data-filter=".logos">
-                                        <span data-hover="logos">logos</span>
+                                    <li data-filter=".newsletter"><span data-hover="newsletter">newsletter</span>
                                     </li>
-                                    <li data-filter=".newsletter">
-                                        <span data-hover="newsletter">newsletter</span>
+                                    <li data-filter=".print"><span data-hover="print">print</span>
                                     </li>
-                                    <li data-filter=".photography">
-                                        <span data-hover="photography">photography</span>
+                                    <li data-filter=".video"><span data-hover="video">video</span>
                                     </li>
-                                    <li data-filter=".print">
-                                        <span data-hover="print">print</span>
-                                    </li>
-                                    <li data-filter=".promo">
-                                        <span data-hover="promo">promo</span>
-                                    </li>
-                                    <li data-filter=".sports">
-                                        <span data-hover="sports">sports</span>
-                                    </li>
-                                    <li data-filter=".storyboard">
-                                        <span data-hover="storyboard">storyboard</span>
-                                    </li>
-                                    <li data-filter=".videos">
-                                        <span data-hover="videos">videos</span>
-                                    </li>
-                                    <li data-filter=".web-design">
-                                        <span data-hover="web design">web design</span>
+                                    <li data-filter=".web-design"><span data-hover="web design">web design</span>
                                     </li>
                                 </ul>
                             </div>
@@ -228,17 +191,16 @@
                         </div>
                         <!-- End Ajax Section -->
                         <div class="row work__content__thumbnails">
-                            <div class="col-12 col-md-4 project show b2b">
-                                <a href="#!projects/b2b-demo-ads" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show infographics">
+                                <a href="#!projects/infographics-baby" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Demo ads<br/><span>b2b</span></p>
+                                            <p>Baby Fair<br/><span>infographics</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/0J6A0uO.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/infographics-baby/infographics-baby-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show html5">
-                                <a href="#!projects/html5-only-in-the-darkness" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show infographics"><a href="#!projects/infographics-baby2" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Only in the Darkness<br/><span>html5</span></p>
+                                            <p>Baby Fair Giveaway<br/><span>infographics</span></p>
                                         </div>
                                     </div> <img src="https://i.imgur.com/4Onxdet.jpg" alt="thumbnail"/> </a>
                             </div>
