--- a/projects/infographics-baby2/_pgbackup/index_1738502803.html
+++ b/projects/infographics-baby2/_pgbackup/index_1738502803.html
@@ -51,13 +51,11 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="projects/infographics-baby2-0.jpg" target="_blank"><img border="0" src="projects/infographics-baby2.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="projects/infographics-baby2-0.jpg" target="_blank"><img border="0" src="projects/infographics-baby2.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Baby Fair Giveaway</h4>
-                        <small>Infographics</small>
+                        <h4>Baby Fair Giveaway</h4><small>Infographics</small>
                     </li>
                     <li>
                         <p>Key Visual</p>
@@ -71,20 +69,15 @@
                     <p><strong>Objective:</strong> Design engaging ads for a giveaway event at the Baby Fair to attract parents and expecting families.</p>
                     <p><strong>Process & Tactics:</strong></p>
                     <ul>
-                        <li>
-                            <strong>Understanding the Event:</strong> Worked closely with the team to capture the essence of the giveaway event and understand the target audience.
+                        <li><strong>Understanding the Event:</strong> Worked closely with the team to capture the essence of the giveaway event and understand the target audience.
                         </li>
-                        <li>
-                            <strong>Conceptualization:</strong> Generated creative concepts featuring the giveaway prizes, including a Bugaboo Butterfly Complete stroller and a Cler Liingo Infant Car Seat.
+                        <li><strong>Conceptualization:</strong> Generated creative concepts featuring the giveaway prizes, including a Bugaboo Butterfly Complete stroller and a Cler Liingo Infant Car Seat.
                         </li>
-                        <li>
-                            <strong>Design Execution:</strong> Designed an eye-catching banner and promotional materials that clearly showcased the prizes and event dates.
+                        <li><strong>Design Execution:</strong> Designed an eye-catching banner and promotional materials that clearly showcased the prizes and event dates.
                         </li>
-                        <li>
-                            <strong>Feedback & Refinement:</strong> Incorporated feedback from stakeholders to refine the design and ensure alignment with brand guidelines and event goals.
+                        <li><strong>Feedback & Refinement:</strong> Incorporated feedback from stakeholders to refine the design and ensure alignment with brand guidelines and event goals.
                         </li>
-                        <li>
-                            <strong>Final Delivery:</strong> Ensured all deliverables were of high quality and launched the ads across various media channels.
+                        <li><strong>Final Delivery:</strong> Ensured all deliverables were of high quality and launched the ads across various media channels.
                         </li>
                     </ul>
                     <p><strong>Outcome:</strong> <em>Successful Campaign:</em> The giveaway event generated significant interest and participation, contributing to the overall success of the Baby Fair.</p>
