--- a/index.html
+++ b/index.html
@@ -204,12 +204,11 @@
                                         </div>
                                     </div> <img src="projects/infographics-baby2/infographics-baby2-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show b2b">
-                                <a href="#!projects/b2b-event-ads" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show infographics"><a href="#!projects/infographics-boats" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Event ads<br/><span>b2b</span></p>
+                                            <p>Promotional<br/><span>infographics</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/AE1cR4f.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/infographics-boats/infographics-boats-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show b2b">
                                 <a href="#!projects/b2b-hiring-ads" class="thumbnail"> <div class="overlay">
