--- a/projects/infographics-boats/_pgbackup/index_1738503324.html
+++ b/projects/infographics-boats/_pgbackup/index_1738503324.html
@@ -51,13 +51,11 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage">
-            <a href="projects/infographics-boats/infographics-boats-0.jpg" target="_blank"><img border="0" src="projects/infographics-boats/infographics-boats.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage"><a href="infographics-boats-0.jpg" target="_blank"><img border="0" src="infographics-boats.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Burning the Boats Promotional Banner</h4>
-                        <small>Infographics</small>
+                        <h4>Burning the Boats Promotional Banner</h4><small>Infographics</small>
                     </li>
                     <li>
                         <p>Key Visual</p>
@@ -71,15 +69,20 @@
                     <p><strong>Objective:</strong> Create a striking promotional poster for the event "Burning the Boats" to attract and inform the audience.</p>
                     <p><strong>Process & Tactics:</strong></p>
                     <ul>
-                        <li><strong>Understanding the Event:</strong> Collaborated with the Digital Manager to understand the theme and key messages. Researched similar events and their promotional strategies.
+                        <li>
+                            <strong>Understanding the Event:</strong> Collaborated with the Digital Manager to understand the theme and key messages. Researched similar events and their promotional strategies.
                         </li>
-                        <li><strong>Conceptualization:</strong> Generated initial design concepts emphasizing the event’s title and key speakers: Bill Phillips, Coach Ballgame, and Jason Seward.
+                        <li>
+                            <strong>Conceptualization:</strong> Generated initial design concepts emphasizing the event’s title and key speakers: Bill Phillips, Coach Ballgame, and Jason Seward.
                         </li>
-                        <li><strong>Design Execution:</strong> Designed a bold and visually appealing poster with a dark background to make the orange and white text stand out. Ensured the names of the speakers and the presenting sponsor, "608B Capital," were prominently displayed.
+                        <li>
+                            <strong>Design Execution:</strong> Designed a bold and visually appealing poster with a dark background to make the orange and white text stand out. Ensured the names of the speakers and the presenting sponsor, "608B Capital," were prominently displayed.
                         </li>
-                        <li><strong>Feedback & Refinement:</strong> Incorporated feedback from stakeholders to refine the design and ensure it met the event's promotional goals.
+                        <li>
+                            <strong>Feedback & Refinement:</strong> Incorporated feedback from stakeholders to refine the design and ensure it met the event's promotional goals.
                         </li>
-                        <li><strong>Final Delivery:</strong> Ensured the final poster was of high quality and ready for both digital and print distribution.
+                        <li>
+                            <strong>Final Delivery:</strong> Ensured the final poster was of high quality and ready for both digital and print distribution.
                         </li>
                     </ul>
                     <p><strong>Outcome:</strong> <em>Engaging Promotion:</em> The promotional poster effectively captured attention and conveyed essential information, contributing to the event's overall success.</p>
