--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
                                         </div>
                                     </div> <img src="projects/infographics-boats/infographics-boats-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show b2b">
-                                <a href="#!projects/b2b-hiring-ads" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show infographics">
+                                <a href="#!projects/infographics-cruise" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Hiring ads<br/><span>b2b</span></p>
+                                            <p>Travel<br/><span>infographics</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/IeydH5E.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/infographics-cruise/infographics-cruise-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show b2b">
                                 <a href="#!projects/b2b-resources-ads" class="thumbnail"> <div class="overlay">
