--- a/projects/infographics-cruise/_pgbackup/index_1738504227.html
+++ b/projects/infographics-cruise/_pgbackup/index_1738504227.html
@@ -51,11 +51,13 @@
                 <p><small>kate</small></p>
             </div>
         </header>
-        <section id="ajaxpage" class="ajaxpage"><a href="projects/infographics-cruise/infographics-cruise-0.jpg" target="_blank"><img border="0" src="projects/infographics-cruise/infographics-cruise.jpg"/></a>
+        <section id="ajaxpage" class="ajaxpage">
+            <a href="infographics-cruise-0.jpg" target="_blank"><img border="0" src="infographics-cruise.jpg"/></a>
             <div class="ajaxpage__content col-10 offset-1 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
                 <ul class="ajaxpage__content--meta">
                     <li>
-                        <h4>Resorts World Cruises Advertisement</h4><small>Infographics</small>
+                        <h4>Resorts World Cruises Advertisement</h4>
+                        <small>Infographics</small>
                     </li>
                     <li>
                         <p>Key Visual</p>
@@ -69,15 +71,20 @@
                     <p><strong>Objective:</strong> Design an eye-catching advertisement for Resorts World Cruises, promoting the "Genting Dream" cruise ship and its December 2022 sailings to and from Kuala Lumpur with prices starting from $109 per person.</p>
                     <p><strong>Process & Tactics:</strong></p>
                     <ul>
-                        <li><strong>Understanding the Campaign:</strong> Collaborated with the team to understand the key selling points and target audience for the December 2022 sailings.
+                        <li>
+                            <strong>Understanding the Campaign:</strong> Collaborated with the team to understand the key selling points and target audience for the December 2022 sailings.
                         </li>
-                        <li><strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts featuring the cruise ship and iconic landmarks of Kuala Lumpur, such as the Petronas Twin Towers.
+                        <li>
+                            <strong>Conceptualization:</strong> Brainstormed and sketched initial design concepts featuring the cruise ship and iconic landmarks of Kuala Lumpur, such as the Petronas Twin Towers.
                         </li>
-                        <li><strong>Design Execution:</strong> Designed a visually appealing advertisement with a clear message, highlighting the promotional price and including the URL for more information.
+                        <li>
+                            <strong>Design Execution:</strong> Designed a visually appealing advertisement with a clear message, highlighting the promotional price and including the URL for more information.
                         </li>
-                        <li><strong>Feedback &amp; Refinement:</strong> Sent initial designs to stakeholders and incorporated feedback to ensure the ad met brand guidelines and campaign goals.
+                        <li>
+                            <strong>Feedback &amp; Refinement:</strong> Sent initial designs to stakeholders and incorporated feedback to ensure the ad met brand guidelines and campaign goals.
                         </li>
-                        <li><strong>Final Delivery:</strong> Ensured the advertisement was of high quality and ready for both digital and print distribution.
+                        <li>
+                            <strong>Final Delivery:</strong> Ensured the advertisement was of high quality and ready for both digital and print distribution.
                         </li>
                     </ul>
                     <p><strong>Outcome:</strong> <em>Effective Promotion:</em> The advertisement successfully attracted attention and generated interest in the December 2022 sailings, contributing to increased bookings.</p>
