--- a/_pgbackup/index_1738508669.html
+++ b/_pgbackup/index_1738508669.html
@@ -390,54 +390,47 @@
                                         </div>
                                     </div> <img src="projects/newsletter-tiger/newsletter-tiger-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show logos">
-                                <a href="#!projects/logos-mapua-institute-of-technology" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show newsletter"><a href="#!projects/newsletter-xmas" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Mapua Institute of Technology<br/><span>logos</span></p>
+                                            <p>12.12<br/><span>newsletter</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/RjIqPh6.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/newsletter-xmas/newsletter-xmas-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show logos">
-                                <a href="#!projects/logos-pmo" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-aegis" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Project Management Office<br/><span>logos</span></p>
+                                            <p>Concert<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/haHv1AS.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-aegis/print-aegis-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show logos">
-                                <a href="#!projects/logos-spi-active" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-booking" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>SPi Active<br/><span>logos</span></p>
+                                            <p>Promo<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/sRERpB6.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-booking/print-booking-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show logos">
-                                <a href="#!projects/logos-talent-management" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-cocktail" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Talent Management<br/><span>logos</span></p>
+                                            <p>Menu<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/6WOnRZ0.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-cocktail/print-cocktail-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show logos">
-                                <a href="#!projects/logos-talent-management" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-gdream" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Training and Development<br/><span>logos</span></p>
+                                            <p>Promotional<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/QJWMfXB.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-gdream/print-gdream-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show newsletter">
-                                <a href="#!projects/newsletter-bodog-casino" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-klang" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Bodog Casino<br/><span>newsletter</span></p>
+                                            <p>Promo<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/WT0yEDz.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-klang/print-klang-0.jpg" alt="thumbnail"/> </a>
                             </div>
-                            <div class="col-12 col-md-4 project show newsletter">
-                                <a href="#!projects/newsletter-bodog-sport" class="thumbnail"> <div class="overlay">
+                            <div class="col-12 col-md-4 project show print"><a href="#!projects/print-newyork" class="thumbnail"> <div class="overlay">
                                         <div class="project-info">
-                                            <p>Bodog Sport<br/><span>newsletter</span></p>
+                                            <p>Annual Report<br/><span>print</span></p>
                                         </div>
-                                    </div> <img src="https://i.imgur.com/UVU8X8e.jpg" alt="thumbnail"/> </a>
+                                    </div> <img src="projects/print-newyork/print-newyork-0.jpg" alt="thumbnail"/> </a>
                             </div>
                             <div class="col-12 col-md-4 project show newsletter">
                                 <a href="#!projects/newsletter-caspio" class="thumbnail"> <div class="overlay">
