--- a/index.html
+++ b/index.html
@@ -65,18 +65,47 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 about__content__box first">
-                                <h5>Kate Cano</h5>
-                                <p>Over seven years in the creative industry, I’ve had the chance to work on a variety of projects, with companies and individuals. Branding, web design, UI/UX design and art direction. For work inquires send me an <a class="underline" href="mailto:kathleencelinecano@gmail.com">e-mail</a>.</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-10 offset-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 about__content__box">
-                                <h5>Services</h5>
-                                <ul class="services">
-                                    <li>Concept &amp; Strategy</li>
-                                    <li>Art Direction</li>
-                                    <li>Web Design</li>
-                                    <li>UI &amp; UX Design</li>
+                                <h5>Kate Cano</h5> 
+                                <h3>Services Offered:</h3>
+                                <h3>1. Email Content Campaigns</h3>
+                                <p><strong>Platforms:</strong> Mailchimp, HubSpot, Canva</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Content creation and design for engaging email campaigns.</li>
+                                    <li>Audience segmentation and targeted email automation.</li>
+                                    <li>Automated workflows for subscriber management and engagement.</li>
+                                </ul>
+                                <h3>2. Landing Page Development</h3>
+                                <p><strong>Platforms:</strong> Squarespace, GoDaddy Website Builder, Elementor, etc.</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>End-to-end landing page development, including UI/UX design.</li>
+                                    <li>Crafting compelling marketing content for higher conversion rates.</li>
+                                    <li>Integration with marketing tools and analytics.</li>
+                                </ul>
+                                <h3>3. Video Editing</h3>
+                                <p><strong>Focus:</strong> Reels and Stories</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Professional video editing tailored for social media.</li>
+                                    <li>Creative storytelling and engaging visual content.</li>
+                                </ul>
+                                <h3>4. Content Calendar Management</h3>
+                                <p><strong>Platform:</strong> Sprout Social</p>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Creating and managing content calendars.</li>
+                                    <li>Scheduling and uploading content across social media platforms.</li>
+                                </ul>
+                                <h3>5. Adobe Creative Suite Skills</h3>
+                                <p><strong>Capabilities:</strong></p>
+                                <ul>
+                                    <li>Ideation and creation of design development for UI/UX mockups.</li>
+                                    <li>Execution of concepts served to clients.</li>
+                                    <li>Creation of web banner ads (HTML5 ads).</li>
+                                    <li>Design and production of print materials (flyers, business cards, magazine layouts, whitepapers, reports).</li>
+                                    <li>Adherence to brand guidelines in design.</li>
+                                    <li>Creation of infographics, logos, newsletters, and landing pages.</li>
                                 </ul>
                             </div>
                         </div>
